--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>HotelV 1.0</title>
 <link href="css/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="css/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
@@ -14,9 +14,6 @@
 <script src="js/API/captura.js" type="text/javascript"></script>
 <script src="js/API/archivos.js" type="text/javascript"></script>
 <script src="js/API/almacenamiento.js" type="text/javascript"></script>
-<style>
-	.ui-collapsible-content { overflow: auto; height: 250px;text-align: justify; }
-</style>
 </head> 
 <body> 
 
@@ -29,32 +26,34 @@
 			<li><a href="#nr1">Nueva Reservación</a></li>
             <li><a href="#historial">Reservaciones Ant</a></li>
 			<li><a href="#priv">Privacidad</a></li>
-		</ul>	
+		</ul>		
 	</div>
 	<div data-role="footer" data-position="fixed">
-    	<a href="#nosotros" data-role="button" data-theme="b" data-transition="slideup">Nosotros</a>
-		<span style="font: 8pt Arial;">Todos los derechos reservados &copy;</span>
+    <a href="#nosotros"data-role="button" data-transition="slideup" data-theme="b">Nosotros</a>
+    <span style="font: 8pt Arial;">Todos los Derechos Reservados &copy;</span>
 	</div>
 </div>
 
 <div data-role="page" id="nosotros">
 	<div data-role="header">
 		<h1>Nosotros</h1>
-        <a data-direction="reverse" data-rel="back">Atrás</a>
+        <a data-direction="reverse" data-rel="back" >Atras</a>
 	</div>
-	<div data-role="content" style="text-align: justify;">	
-		jQuery mobile framework takes the "write less, do more" mantra to the next level: Instead of writing unique apps for each mobile device or OS, the jQuery mobile framework allows you to design a single highly-branded web site or application that will work on all popular smartphone, tablet, and desktop platforms. Device support.		
+	<div data-role="content" style="text-align:justify;">	
+		jQuery Mobile's emphasis on semantic markup and progressive enhancement makes it super easy to use. If you know basic HTML, you can start building mobile sites right away. Try this cool drag-and-drop UI builder to explore what the library can do, or check out some of the resources below to learn more.		
 	</div>
+	
 </div>
 
 <div data-role="page" id="priv">
 	<div data-role="header">
+    <a data-role="button" data-rel="back" data-direction="reverse">Atras</a>
 		<h1>Privacidad</h1>
-        <a data-role="button" data-rel="back" data-direction="reverse">Atrás</a>
 	</div>
-	<div data-role="content" style="text-align: justify;">	
-		jQuery mobile framework takes the "write less, do more" mantra to the next level: Instead of writing unique apps for each mobile device or OS, the jQuery mobile framework allows you to design a single highly-branded web site or application that will work on all popular smartphone, tablet, and desktop platforms. Device support.	
+	<div data-role="content" style="text-align:justify;">	
+		jQuery Mobile's emphasis on semantic markup and progressive enhancement makes it super easy to use. If you know basic HTML, you can start building mobile sites right away. Try this cool drag-and-drop UI builder to explore what the library can do, or check out some of the resources below to learn more.		
 	</div>
+	
 </div>
 
 <div data-role="page" id="login">
@@ -62,25 +61,35 @@
 		<h1>Registro</h1>
 	</div>
 	<div data-role="content">	
-		<ul data-role="listview" data-inset="true" data-dividertheme="a" data-theme="c">
-        	<li data-role="list-divider">Datos Usuario</li>
-            <li><input type="text" id="regNom" placeholder="Nombre" /></li>
-            <li><input type="email" id="regMail" placeholder="Correo Electrónico" /></li>
-            <li><input type="tel" id="regTel" placeholder="Teléfono" /></li>
-            <li><a href="#" id="regFoto">Tomar Foto</a></li>
-        </ul>
+		<ul data-role="listview" data-inset="true" data-dividertheme="a">
+        <li data-role="list-divider" >Datos Usuario</li>
+        <li><input type="text" id="regNom" placeholder="Nombre" /></li>
+        <li><input type="email" id="regEmail" placeholder="Correo Electrónico"/></li>
+        <li><input type="tel" id="regTel" placeholder="Teléfono"/></li>
+        <li><a href="#" id="regFoto">Tomar Foto </a></li>
+        </ul>		
         <a href="#" data-role="button" id="regEnviar" data-theme="a">Registrar</a>
-	</div>
+	</div>	
 </div>
 
 <div data-role="page" id="historial">
-	<div data-role="header">
-    	<h1>Historial</h1>
-        <a data-role="button" data-rel="back" data-direction="reverse">Atrás</a>
+    <div data-role="header">
+    <h1>Historial</h1>
+    <a data-role="button" data-rel="back" data-direction="reverse">Atras</a>
     </div>
     <div data-role="content">
+    <div data-role="collapsible-set">
+            <div data-role="collapsible" data-collapsed="true">
+                <h3>
+                    26/04/2013
+                </h3>
+                Habitaciones: x<br/>
+                Personas: y<br/>
+                Tipo de Habitacion: z
+            </div>
+        </div>
     </div>
-    <div data-role="footer" data-position="fixed">
+     <div  data-role="footer" data-position="fixed">
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
@@ -102,51 +111,5 @@
         </div>
     </div>
 </div>
-<div data-role="page" id="nr1">
-	<div data-role="header">
-		<h1>Nueva Reserva</h1>
-	</div>
-	<div data-role="content">	
-		<ul data-role="listview" data-inset="true" data-dividertheme="a" data-theme="c">
-        	<li data-role="list-divider">Tipo de Habitación</li>
-            <li><a href="#">Habitación Sencilla</a></li>
-            <li><a href="#">Habitación Doble</a></li>
-            <li><a href="#">Suites</a></li>
-        </ul>
-	</div>
-</div>
-<div data-role="page" id="nr2">
-	<div data-role="header">
-		<h1>Nueva Reserva</h1>
-	</div>
-	<div data-role="content">	
-		<ul data-role="listview" data-inset="true" data-dividertheme="a" data-theme="c">
-        	<li data-role="list-divider">Datos de Reserva</li>
-            <li>Personas: <br><select>
-            	<option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select></li>
-            <li>Habitaciones: <br><select>
-            	<option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select></li>
-            <li>Días: <br><select>
-            	<option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select></li>
-        </ul>
-        <a href="#" data-role="button" data-theme="a">Reservar</a>
-	</div>
-</div>
-
 </body>
 </html>
